--- a/css/master_b-master.css
+++ b/css/master_b-master.css
@@ -437,6 +437,11 @@
 	background-color: #6B6B6B;
 }
 
+#u1912.MuseMenuActive
+{
+	background-color: #999999;
+}
+
 #u1901-4,#u1873-4,#u1867-4,#u1910-4,#u1913-4
 {
 	text-align: center;
@@ -459,301 +464,208 @@
 	position: fixed;
 }
 
-#u1779
+._u1779.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1779-full.png");
+	background-position: left top;
 }
 
-#u1912.MuseMenuActive,#u1779:hover
+#pu1779:hover ._u1779.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1779-r-full.png");
+	background-position: left top;
 }
 
-#u1779:active
+#pu1779:active ._u1779.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1779-m-full.png");
+	background-position: left top;
 }
 
-#u1763
+._u1763.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1779-full.png");
+	background-position: left top;
 }
 
-#u1779.MuseMenuActive,#u1763:hover
+#pu1779.MuseMenuActive ._u1779.f3s_top,#pu1763:hover ._u1763.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1779-r-full.png");
+	background-position: left top;
 }
 
-#u1763:active
+#pu1763:active ._u1763.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1779-m-full.png");
+	background-position: left top;
 }
 
-#u1793
+._u1793.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1779-full.png");
+	background-position: left top;
 }
 
-#u1763.MuseMenuActive,#u1793:hover
+#pu1763.MuseMenuActive ._u1763.f3s_top,#pu1793:hover ._u1793.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1779-r-full.png");
+	background-position: left top;
 }
 
-#u1793:active
+#pu1793:active ._u1793.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1779-m-full.png");
+	background-position: left top;
 }
 
-#u1786
+._u1786.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1779-full.png");
+	background-position: left top;
 }
 
-#u1793.MuseMenuActive,#u1786:hover
+#pu1793.MuseMenuActive ._u1793.f3s_top,#pu1786:hover ._u1786.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1779-r-full.png");
+	background-position: left top;
 }
 
-#u1786:active
+#pu1786:active ._u1786.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1779-m-full.png");
+	background-position: left top;
 }
 
-#u1770
+._u1770.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1779-full.png");
+	background-position: left top;
 }
 
-#u1786.MuseMenuActive,#u1770:hover
+#pu1786.MuseMenuActive ._u1786.f3s_top,#pu1770:hover ._u1770.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1779-r-full.png");
+	background-position: left top;
 }
 
-#u1770:active
+#pu1770:active ._u1770.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1779-m-full.png");
+	background-position: left top;
 }
 
-#u1805
+._u1805.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1779-full.png");
+	background-position: left top;
 }
 
-#u1770.MuseMenuActive,#u1805:hover
+#pu1770.MuseMenuActive ._u1770.f3s_top,#pu1805:hover ._u1805.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1779-r-full.png");
+	background-position: left top;
 }
 
-#u1805:active
+#pu1805:active ._u1805.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1779-m-full.png");
+	background-position: left top;
 }
 
-#u1800
+._u1800.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1779-full.png");
+	background-position: left top;
 }
 
-#u1805.MuseMenuActive,#u1800:hover
+#pu1805.MuseMenuActive ._u1805.f3s_top,#pu1800:hover ._u1800.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1779-r-full.png");
+	background-position: left top;
 }
 
-#u1800:active
+#pu1800:active ._u1800.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1779-m-full.png");
+	background-position: left top;
 }
 
-#u1937
+#pu1800.MuseMenuActive ._u1800.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1779-r-full.png");
+	background-position: left top;
 }
 
-#u1800.MuseMenuActive,#u1937:hover
+._u1937.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1937-full.png");
+	background-position: left top;
 }
 
-#u1937:active
+#pu1937:hover ._u1937.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1937-r-full.png");
+	background-position: left top;
 }
 
-#u1930
+#pu1937:active ._u1937.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1937-m-full.png");
+	background-position: left top;
 }
 
-#u1937.MuseMenuActive,#u1930:hover
+._u1930.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1937-full.png");
+	background-position: left top;
 }
 
-#u1930:active
+#pu1937.MuseMenuActive ._u1937.f3s_top,#pu1930:hover ._u1930.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1937-r-full.png");
+	background-position: left top;
 }
 
-#u1923
+#pu1930:active ._u1930.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1937-m-full.png");
+	background-position: left top;
 }
 
-#u1930.MuseMenuActive,#u1923:hover
+._u1923.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1937-full.png");
+	background-position: left top;
 }
 
-#u1923:active
+#pu1930.MuseMenuActive ._u1930.f3s_top,#pu1923:hover ._u1923.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1937-r-full.png");
+	background-position: left top;
 }
 
-#u1944
+#pu1923:active ._u1923.f3s_top
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
-	position: relative;
+	background-image: url("../images/u1937-m-full.png");
+	background-position: left top;
 }
 
-#u1923.MuseMenuActive,#u1944:hover
+._u1944.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1937-full.png");
+	background-position: left top;
 }
 
-#u1944:active
+#pu1923.MuseMenuActive ._u1923.f3s_top,#pu1944:hover ._u1944.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1937-r-full.png");
+	background-position: left top;
+}
+
+#pu1944:active ._u1944.f3s_top
+{
+	background-image: url("../images/u1937-m-full.png");
+	background-position: left top;
 }
 
 #u1897,#u1869,#u1890,#u1893,#u1876,#u1879,#u1883,#u1886,#u1841,#u1843,#u1858,#u1861,#u1851,#u1854,#u1844,#u1847,#u1904,#u1911,#u1776,#u1762,#u1790,#u1783,#u1769,#u1804,#u1797,#u1934,#u1927,#u1920,#u1941,#u1976
@@ -761,45 +673,67 @@
 	position: relative;
 }
 
-#u1979
+#u1779,#u1763,#u1793,#u1786,#u1770,#u1805,#u1800,#u1937,#u1930,#u1923,#u1944,#u1979
 {
-	-pie-box-shadow: 3px 3px 2px #CECBCB;
-	-moz-box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	-webkit-box-shadow: 3px 3px 2px -1px rgba(157, 152, 152, 0.5);
-	box-shadow: 3px 3px 2px rgba(157, 152, 152, 0.5);
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #949D9C;
-	-moz-border-radius: 3px;
-	-webkit-border-radius: 3px;
-	-khtml-border-radius: 3px;
-	border-radius: 3px;
+	-moz-border-radius: 12px;
+	-webkit-border-radius: 12px;
+	-khtml-border-radius: 12px;
+	border-radius: 12px;
+	-pie-box-shadow: 6px 5px 11px #EDE1D3;
+	-moz-box-shadow: 6px 5px 11px rgba(219, 196, 168, 0.5);
+	-webkit-box-shadow: 6px 5px 11px -1px rgba(219, 196, 168, 0.5);
+	box-shadow: 6px 5px 11px rgba(219, 196, 168, 0.5);
 	position: relative;
 }
 
-#u1944.MuseMenuActive,#u1979:hover
+._u1979.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1937-full.png");
+	background-position: left top;
 }
 
-#u1979:active
+#pu1944.MuseMenuActive ._u1944.f3s_top,#pu1979:hover ._u1979.f3s_top
 {
-	background-color: #6B6B6B;
+	background-image: url("../images/u1937-r-full.png");
+	background-position: left top;
 }
 
-#u1979.MuseMenuActive
+#pu1979:active ._u1979.f3s_top
 {
-	background-color: #999999;
+	background-image: url("../images/u1937-m-full.png");
+	background-position: left top;
+}
+
+#pu1979.MuseMenuActive ._u1979.f3s_top
+{
+	background-image: url("../images/u1937-r-full.png");
+	background-position: left top;
 }
 
 #u1780-4,#u1766-4,#u1796-4,#u1787-4,#u1771-4,#u1807-4,#u1801-4,#u1938-4,#u1931-4,#u1924-4,#u1947-4,#u1980-4
 {
 	text-align: center;
-	line-height: 22px;
 	color: #FFFFFF;
 	font-size: 18px;
-	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
+	line-height: 22px;
+	font-family: Trebuchet, Trebuchet MS, Tahoma, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+}
+
+#pu1779:hover #u1779,#pu1779:active #u1779,#pu1779.MuseMenuActive #u1779,#pu1763:hover #u1763,#pu1763:active #u1763,#pu1763.MuseMenuActive #u1763,#pu1793:hover #u1793,#pu1793:active #u1793,#pu1793.MuseMenuActive #u1793,#pu1786:hover #u1786,#pu1786:active #u1786,#pu1786.MuseMenuActive #u1786,#pu1770:hover #u1770,#pu1770:active #u1770,#pu1770.MuseMenuActive #u1770,#pu1805:hover #u1805,#pu1805:active #u1805,#pu1805.MuseMenuActive #u1805,#pu1800:hover #u1800,#pu1800:active #u1800,#pu1800.MuseMenuActive #u1800,#pu1937:hover #u1937,#pu1937:active #u1937,#pu1937.MuseMenuActive #u1937,#pu1930:hover #u1930,#pu1930:active #u1930,#pu1930.MuseMenuActive #u1930,#pu1923:hover #u1923,#pu1923:active #u1923,#pu1923.MuseMenuActive #u1923,#pu1944:hover #u1944,#pu1944:active #u1944,#pu1944.MuseMenuActive #u1944,#pu1979:hover #u1979,#pu1979:active #u1979,#pu1979.MuseMenuActive #u1979
+{
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	-moz-border-radius: 12px;
+	-webkit-border-radius: 12px;
+	-khtml-border-radius: 12px;
+	border-radius: 12px;
+	-pie-box-shadow: 6px 5px 11px #EDE1D3;
+	-moz-box-shadow: 6px 5px 11px rgba(219, 196, 168, 0.5);
+	-webkit-box-shadow: 6px 5px 11px -1px rgba(219, 196, 168, 0.5);
+	box-shadow: 6px 5px 11px rgba(219, 196, 168, 0.5);
 	position: relative;
 }
 
